hphp/hack/test/typecheck/shape_idx4.php.exp
File "shape_idx4.php", line 7, characters 15-16:
Invalid argument (Typing[4110])
File "hhi_lib__srcs/Shapes.hhi", line 34, characters 5-9:
This is a shape
File "shape_idx4.php", line 6, characters 15-17:
It is incompatible with an int
